# AniHeist-API

./: .env.example  .gitignore  API_DOCS.txt  Dockerfile  Plan.md  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start.sh  start_local.sh  ubuntu@ec2-35-88-78-167.us-west-2.computeusercontent.com  video-proxy-worker.js
consumet_api/: __init__.py  animepahe.py  bridge.py  core.py  miruro_pipe.py  pulsar.py  reanime_api.py
scripts/: health_check.py
src/: __init__.py  api.py  config.py  fallback_manager.py  orchestrator.py  proxy_pool.py
src/adapters/: __init__.py  anidb.py  anikoto_scraper.py  anivexa.py  anizone.py  base.py  consumet.py  denwa.py  generic.py  miruro.py  reanime.py  unified.py
src/cache/: __init__.py  redis_cache.py
src/extractors/: __init__.py  network.py  subtitles.py  video.py
src/middleware/: __init__.py  error_handler.py  rate_limit.py
src/models/: __init__.py  anime.py  stream.py
src/utils/: __init__.py  anilist.py  http_client.py  logger.py  proxy.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_fallback_manager.py  test_orchestrator.py
tests/adapters/: __init__.py  test_anidb.py  test_anizone.py  test_miruro.py
